# MapMyStandards

./: .env.example  .env.production.example  .env.template  .env.test  .flake8  .gitattributes  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .railway-deploy-trigger  .railway-fresh-deploy  .railwayignore  .stripe-do-not-modify  .vercel-redeploy  .vercelignore  404_FIXED.md  422_ERROR_COMPLETE_RESOLUTION.md  ABOUT_PAGE_UPDATE.md  ACCREDITATION_DIRECTOR_MARKETING.md  ADD_DOMAIN_TO_SENDGRID.md  AI_CONFIGURATION_GUIDE.md  ALTERNATIVE_EMAIL_SOLUTIONS.md  ANALYZE_DOWNLOAD_FIX_NEEDED.md  ANALYZE_DOWNLOAD_ROOT_CAUSE_AND_FIX.md  API_CONFIGURATION_GUIDE.md  API_ENDPOINTS_IMPLEMENTATION.md  API_FIXES_COMPLETE.md  ARCHITECTURE_OVERVIEW.md  ASSESSMENT_FIXES_IMPLEMENTED.md  AUDIT_FIXES_IMPLEMENTED.md  AUTHENTICATION_CLARIFICATION.md  AUTHENTICATION_FLOW_FIX_COMPLETE.md  AUTHENTICATION_SOLUTION.md  AUTH_BRIDGE_FIX_COMPLETE.md  AUTH_LOGOUT_FIX_SUMMARY.md  AWS_S3_SETUP.md  AWS_S3_UPLOAD_SETUP.md  BACKEND_API_COMPLETE.md  BACKEND_COMPLETE.md  BACKEND_DEPLOYMENT_SUMMARY.md  (+731 more)
.mms/: BUILD_STATE.json
.next/: BUILD_ID  app-build-manifest.json  app-path-routes-manifest.json  build-manifest.json  next-server.js.nft.json  prerender-manifest.json  required-server-files.json  routes-manifest.json  trace
.railway/: backend.json  config.json  frontend.json
.tmpenv/: pyvenv.cfg
api/: index.py
app/: globals.css  layout.js  layout.tsx  page.js  providers.tsx
assets/: styles.css
backups/: README.md
components/: UploadDropzone.tsx
config/: gunicorn.conf.py  k12_standards_config.yaml  standards_config.yaml
customer_systems_deploy/: customer_management.py  customer_onboarding.py
docker-configs-backup/: Dockerfile.a3e-enhanced  Dockerfile.optimized  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.yml
dockerfiles_backup/: Dockerfile.production
(+753 files in other folders)
