[tool.poetry]
name = "a3e"
version = "0.1.0"
description = "Autonomous Accreditation & Audit Engine"
authors = ["MapMyStandards Team <hello@mapmystandards.ai>"]
readme = "README.md"
packages = [{include = "a3e", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
gunicorn = "^21.2.0"
sqlalchemy = "^2.0.23"
alembic = "^1.12.1"
psycopg2-binary = "^2.9.9"
pymilvus = "^2.3.4"
autogen-agentchat = "^0.2.0"
boto3 = "^1.34.0"
aioboto3 = "^12.3.0"
langchain = "^0.1.0"
langchain-aws = "^0.1.0"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
redis = "^5.0.1"
celery = "^5.3.4"
strawberry-graphql = {extras = ["fastapi"], version = "^0.215.0"}
httpx = "^0.25.2"
python-multipart = "^0.0.6"
jinja2 = "^3.1.2"
pyyaml = "^6.0.1"
sentence-transformers = "^2.2.2"
numpy = "^1.25.2"
scipy = "^1.11.4"
scikit-learn = "^1.3.2"
openai = "^1.3.0"
anthropic = "^0.7.0"
pypdf = "^3.17.0"
python-docx = "^1.1.0"
openpyxl = "^3.1.2"
pandas = "^2.1.4"
reportlab = "^4.0.7"
transformers = "^4.36.0"
torch = "^2.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
black = "^23.11.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
mypy = "^1.7.0"
pre-commit = "^3.5.0"
httpx = "^0.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
